<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_homeBackground"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.application.wondernote.HomeActivity" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_homeText"
        android:textSize="65dp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:textColor="@color/color_homeText"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_jumpCreateNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_corners"
            android:drawableLeft="@drawable/note_icon"
            android:text="@string/button_jumpCreateNote"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_jumpReadNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_corners"
            android:drawableLeft="@drawable/note_read_icon"
            android:text="@string/button_jumpReadNote"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_jumpConfigNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_corners"
            android:drawableLeft="@drawable/config_icon"
            android:text="@string/button_jumpConfigNote"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_company"
        android:textColor="@color/color_homeText"
        android:textSize="25dp" />

</LinearLayout>