<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginTop="15dp"
    android:gravity="top|center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.application.wondernote.note.CreateNoteCategoryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/create_note_category" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginTop="3dp"
            android:gravity="left"
            android:text="@string/note_create_category_headline"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="38dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/note_create_category_instruction1"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/note_create_category"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/note_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/note_create_category_list_instruction"
            android:textSize="25dp" />

        <ListView
            android:id="@+id/note_category_list"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center" >

        <Button
            android:id="@+id/button_add"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_change"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button_change" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button_delete" />
    </LinearLayout>

</LinearLayout>