<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_homeBackground"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.application.wondernote.SplashActivity" >

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_homeText"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/splash_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_version"
        android:textColor="@color/color_homeText"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/splash_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/app_company"
        android:textColor="@color/color_homeText"
        android:textSize="25sp" />

</LinearLayout>